<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/question_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/Report"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/correct"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:text="@string/wrong"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/question_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/restart"
        android:textColor="@color/background"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold" />

</LinearLayout>